--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,9 +29,14 @@ chrono = "0.4"
 google-cloud-pubsub = "0.30"
 gouth = "0.2"
 clap = { version = "4.5", features = ["derive"] }
+anyhow = "1"
 
 [build-dependencies]
 tonic-build = { version = "0.12", features = ["prost"] }
+
+[dev-dependencies]
+rstest = "0.24"
+uuid = { version = "1", features = ["v4"] }
 
 [lib]
 name = "pubsub_grpc_proxy"
